# mcp

./: .env.example  .gitignore  .mcp.json  .mise.toml  .tool-versions  CLAUDE.md  EXIF_EXTRACTOR_SUMMARY.md  README.md  czynaczas.fastmcp.json  czynaczas.py  domains.fastmcp.json  domains.py  exif_extractor.fastmcp.json  exif_extractor.py  fastmcp.json  gazetki.fastmcp.json  gazetki.py  gemini_alt.fastmcp.json  gemini_alt.py  gemini_image_descriptions.fastmcp.json  gemini_image_descriptions.py  image optimization.md  ovh_verifier.py  plate_recognition.fastmcp.json  plate_recognition.py  pyproject.toml  tablica.fastmcp.json  tablica.py
.claude/: settings.json
.github/workflows/: tests.yml
plans/czynaczas-discovery/: protocol.md
tests/: conftest.py  test_domains.py  test_exif_extractor.py  test_gazetki.py  test_gemini_alt.py  test_gemini_image_descriptions.py  test_plate_recognition.py  test_tablica.py
tests/fixtures/: IMG_5134.heic  biedronka_gazetki_list.html  biedronka_leaflet_api.json  biedronka_press_detail.html  lidl_flyer_detail.json  lidl_gazetki_list.html  meta_pixel_setup.md  whois_responses.json
