[project]
name = "mcp-servers"
version = "0.1.0"
description = "Personal MCP servers collection"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "google-genai>=1.73.1",
    "Pillow>=12.2.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "pillow-heif>=1.3.0",
    "aioresponses>=0.7.8",
    "pypdf>=5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["domains", "gemini_image_descriptions", "tablica", "exif_extractor", "plate_recognition", "ovh_verifier", "czynaczas", "gazetki"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
